@@ -96,3 +96,4 @@ issues:
     - path: _test\.go
       linters:
         - gomnd
+        - dupword
