@@ -1,5 +1,8 @@
 This file documents the revision history for the Mod-Gearman-Worker-Go
 
+next:
+          - improve command line parsing
+
 1.3.9    Thu Feb 15 18:02:53 CET 2024
           - change default timeout return code to unknown (3)
           - fix commands using backslashes inside of double quotes
